도메인 모델 수정 및 코드 리팩터링